this commit fixes alignment issues between the left hand side and right hand side of the line that separates title and content

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -59,45 +59,44 @@ h1 {
 }
 
 .about-me {
-    flex: 0.75;
-    padding-top: 2%;
-    padding-right: 1%;
+    flex: 1;
+    /* padding-top: 2%; */
+    padding: 20px;
     border-right: black 5px solid;
     text-align: right;
-    width: 30%;
+    /* width: 30%; */
 }
 
 .about-me-text {
     flex: 3;
-    padding-top: 1.5%;
-    padding-left: 3%;
+    padding: 20px;
     width: 70%;
 }
 
 /* Work Container */
 .container-2 {
     display: flex;
-    flex-wrap: wrap;
-    padding: 1%;
+    /* flex-wrap: wrap; */
+    /* padding: 1%; */
 }
 
 .work {
-    flex: 0.66;
-    padding-top: 3%;
+    flex: 1;
+    padding: 20px;
     border-right: black 5px solid;
-    width: 30%;
+    /* width: 30%; */
     text-align: right;
-    padding-right: 1%;
 }
 
 .work-photos {
     width: 70%;
     align-items: right;
+    flex: 3;
+    padding: 20px;
 }
 
 /* NEED TO FIND A WAY TO MAKE THIS PIC TAKE UP WHOLE FIRST LINE OF WORK */
 .surf {
-    /* flex: 1; */
     width: 800px;
     height: 400px;
     order: 0;
@@ -108,17 +107,14 @@ h1 {
     position: relative;
 }
 
+
 .child {
     position: absolute;
-    top: 70%;
-    left: 10%;
+    top: 60px;
+    left: 10px;
     background-color: #2aefcb;
     border:#474a4b solid 3px;
-    z-index: 1;
-}
-
-.up {
-    top: 30%;
+    /* z-index: 1; */
 }
 
 .dog {
@@ -149,38 +145,26 @@ h1 {
     order: 4;
 }
 
-/* Footer Container */
+/* Contact Me Container */
 .container-3 {
     display: flex;
 }
 
-.contact-me {
-    flex-direction: row;
-    flex: 0.242;
-    padding-top: 1%;
+.contact {
+    flex: 1;
     text-align: right;
-    padding-right: 1%;
     border-right: black 5px solid;
-    width: 30%;
+    padding: 20px;
 }
 
 .contact-info {
     display: flex;
-    flex: 2;
-    /* justify-content: space-around; */
-    /* flex-direction: row; */
-    list-style-type: none;
-    /* padding: 1%; */
-}
-
-.list-info {
+    flex: 3;
+    padding: 20px;
     justify-content: space-around;
 }
 
-footer ul li {
-    list-style-type: none;
-    justify-content: space-around;
-}
+
 
 /* Added some padding and styling for the photos */
 img {
@@ -190,8 +174,6 @@ img {
     display: block;
     float: right;
     z-index: 0;
-    /* width:  400px;
-    height: 350px; */
 }
 
 
@@ -200,15 +182,5 @@ img:hover {
     background-color: #57b3bb;
     color: #89bdb7;
 }
-
-
-
-/* I forgot what this does but it doesnt seem to work */
-/* :root {
-    --outer-space: #33393f;
-    --bright-turquoise: #2aefcb;
-    --gin: #e0eae4;
-    --heliotrope: #e866ec;
-} */
 
 
